# pyjopa

./: .gitignore  .gitmodules  COMPREHENSIVE_TEST_REPORT.md  README.md  ROADMAP.md  SESSION_LOG.md  TEST_SUITE_SUMMARY.md  debug_lambda.py  debug_lambda2.py  debug_lambda3.py  demo.py  flake.nix  pyproject.toml  roadmap_progress.md
.github/workflows/: ci.yml
java8_parser/: .gitignore  README.md  build_whitelist.py  build_whitelist_v2.py  demo.py  flake.nix  pyproject.toml  run_tests.py
java8_parser/java8_parser/: __init__.py  ast.py  classfile.py  classreader.py  codegen.py  java8.lark  parser.py  types.py
java8_parser/pyjopa/: classfile.py  codegen.py  signature.py
java8_parser/pyjopa/codegen/: boxing.py  generator.py  signatures.py  statements.py
java8_parser/test_compiler/: AnnotationTest.java  GenericTest.java  StaticCalls.java  run_tests.py
java8_parser/tests/: test_parser.py
pyjopa/: ast.py  classfile.py  cli.py  java8.lark  parser.py
pyjopa/codegen/: __init__.py  arrays.py  boxing.py  expressions.py  generator.py  lambdas.py  resolution.py  signatures.py  statements.py  types.py
test_compiler/: ControlFlow.java  GenericsAnnotationsTest.java  Hello.java  SimpleGeneric.java  run_tests.py
tests/: test_integration.py
tests/integration/: README.md  TEST_PLAN.md  TestBoundedTypes.java  TestBridge.java  TestWildcardsSimple.java  cat01_autoboxing.java  cat01_char_escapes.java  cat01_float_double.java  cat01_hex_binary_literals.java  cat01_null_literal.java  cat01_numeric_literals.java  cat01_primitives_basic.java  cat01_string_literals.java  (+68 more)
