[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "java8-parser"
version = "0.1.0"
description = "A complete Java 8 parser with immutable AST and JSON serialization"
requires-python = ">=3.10"
dependencies = [
    "lark>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-xdist>=3.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
